Distinguish between the catalog and datapase part

--- a/roles/ckan/templates/config.ini.j2
+++ b/roles/ckan/templates/config.ini.j2
@@ -87,7 +87,7 @@ ckan.plugins =
     spatial_metadata spatial_query
     stats text_view image_view 
     recline_view recline_grid_view
-#    oauth2
+    oauth2
 
 # Define which views should be created by default
 # (plugins must be loaded in ckan.plugins)
